# covscript-process

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  CNI_API.md  CXX_API.md  README.md  process.cpp  test.cpp  test.csc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
csbuild/: format.bat  format.sh  process.json
include/: process.hpp
include/mozart++/: file
include/mozart++/mpp_core/: base.hpp  event_emitter.hpp  exception.hpp  function.hpp  type_traits.hpp
include/mozart++/mpp_foundation/: fdstream.hpp  io.hpp  iterator_range.hpp
include/mozart++/mpp_string/: string.hpp
include/mozart++/mpp_system/: file.hpp  process.hpp
src/: core.cpp  process.cpp  process_unix.cpp  process_unix_wait.cpp  process_win32.cpp  process_win32_wait.cpp
tests/: test.csc  test_async.csc  test_corner.csc  test_debug.csc  test_fiber.csc  test_file_redirect.csc  test_linux_exec.csc  test_linux_smoke.csc  test_stream.csc  test_unit.csc
tests/cpp/: test_uv_fs.cpp
